# erogaki-wrapper-shared-python

./: setup.cfg
.github/workflows/: python-publish.yaml
erogaki_wrapper_shared_python/: AbstractErogakiWrapperError.py  ErogakiWrapperConfig.py  ImageProcessor.py
src/: AbstractErogakiWrapperConfig.py
