[metadata]
name = erogaki-wrapper-shared-python
version = 0.4
author = erogaki-devs (undefinedprojects, Yurifag)
author_email = undefinedprojects@outlook.com, yurifag@grzb.de
description = Shared libraries of erogaki wrapper python projects
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
packages = erogaki_wrapper_shared_python
python_requires = >=3.5
